--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
+        "laravel/framework": "~5.1",
         "bitaac/bitfabric": "dev-master",
         "bitaac/retro-theme": "dev-master"
     },
