--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,19 @@
 {
-    "name": "bitaac/bitaac",
-    "description": "An automatic account creator for Open Tibia servers.",
-    "keywords": ["bitaac", "bitfabric", "laravel", "tibia", "opentibia"],
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Kristoffer Eklund",
-            "email": "kristoffereklund1@gmail.com",
-            "homepage": "https://otland.net/members/cornex.10032/",
-            "role": "Developer"
-        }
-    ],
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "~5.1",
-        "bitaac/bitfabric": "dev-master",
-        "bitaac/retro-theme": "dev-master"
+        "laravel/framework": "5.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "symfony/css-selector": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -32,25 +23,27 @@
             "App\\": "app/"
         }
     },
-    "autoload-dev": {},
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
     "scripts": {
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize",
-            "php artisan vendor:publish --tag=public",
-            "php artisan vendor:publish --tag=config"
+            "php artisan optimize"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
             "php artisan optimize"
-        ],
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
         ]
     },
     "config": {
