--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "bitaac/bitfabric": "^0.1.0"
+        "bitaac/bitfabric": "~0.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
