--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_DEBUG=false
 APP_KEY=SomeRandomString
 
+DB_PORT=3306
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
 DB_USERNAME=homestead
@@ -21,3 +22,5 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+DISTRO=bitaac\Othire\OthireServiceProvider::class
