--- a/.env.example
+++ b/.env.example
@@ -23,4 +23,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-DISTRO=bitaac\Othire\OthireServiceProvider::class
+DISTRO=bitaac\Othire\OthireServiceProvider
