Swith to TFS 1.0 as default

--- a/.env.example
+++ b/.env.example
@@ -23,4 +23,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-DISTRO=bitaac\Othire\OthireServiceProvider
+DISTRO=bitaac\Tfs10\Tfs10ServiceProvider
