--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     },
     "scripts": {
         "post-root-package-install": [
+            "php artisan bitaac:install",
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
