--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "php artisan key:generate",
+            "php artisan bitaac:install"
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
