--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ APP_DEBUG=false
 APP_KEY=SomeRandomString
 
 DB_PORT=3306
-DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+#DB_HOST=127.0.0.1
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -23,4 +23,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-DISTRO=bitaac\Tfs10\Tfs10ServiceProvider
+#DISTRO=bitaac\Tfs10\Tfs10ServiceProvider
