--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,7 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate",
-            "php artisan bitaac:install"
+            "php artisan key:generate"
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
