--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_URL=http://localhost
 
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-#DB_HOST=127.0.0.1
-#DB_DATABASE=homestead
-#DB_USERNAME=homestead
-#DB_PASSWORD=secret
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -22,5 +24,3 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-#HTTPS=false
